# frontier

client/consensus/: Cargo.toml
client/db/: Cargo.toml
client/mapping-sync/: Cargo.toml
client/rpc/: Cargo.toml
frame/base-fee/: Cargo.toml
frame/dynamic-fee/: Cargo.toml
frame/ethereum/: Cargo.toml
frame/evm/: Cargo.toml
frame/evm/precompile/blake2/: Cargo.toml
frame/evm/precompile/bn128/: Cargo.toml
frame/evm/precompile/curve25519/: Cargo.toml
frame/evm/precompile/dispatch/: Cargo.toml
frame/evm/precompile/ed25519/: Cargo.toml
frame/evm/precompile/modexp/: Cargo.toml
frame/evm/precompile/sha3fips/: Cargo.toml
frame/evm/precompile/simple/: Cargo.toml
primitives/consensus/: Cargo.toml
primitives/evm/: Cargo.toml
primitives/rpc/: Cargo.toml
primitives/self-contained/: Cargo.toml
template/node/: Cargo.toml
template/runtime/: Cargo.toml
