[package]
name = "fc-consensus"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = { branch = "polkadot-v0.9.16", git = "https://github.com/baidang201/substrate" }
sp-blockchain = { branch = "polkadot-v0.9.16", git = "https://github.com/baidang201/substrate" }
sp-runtime = { branch = "polkadot-v0.9.16", git = "https://github.com/baidang201/substrate" }
sp-api = { branch = "polkadot-v0.9.16", git = "https://github.com/baidang201/substrate" }
sc-client-api = { branch = "polkadot-v0.9.16", git = "https://github.com/baidang201/substrate" }
sp-block-builder = { branch = "polkadot-v0.9.16", git = "https://github.com/baidang201/substrate" }
sp-inherents = { branch = "polkadot-v0.9.16", git = "https://github.com/baidang201/substrate" }
fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fc-db = { version = "2.0.0-dev", path = "../db" }
sp-consensus = { branch = "polkadot-v0.9.16", git = "https://github.com/baidang201/substrate" }
sc-consensus = { branch = "polkadot-v0.9.16", git = "https://github.com/baidang201/substrate" }
log = "0.4.8"
futures = { version = "0.3.17", features = ["compat"] }
sp-timestamp = { branch = "polkadot-v0.9.16", git = "https://github.com/baidang201/substrate" }
derive_more = "0.99.2"
prometheus-endpoint = { branch = "polkadot-v0.9.16", package = "substrate-prometheus-endpoint", git = "https://github.com/baidang201/substrate" }
async-trait = "0.1"